--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+
+.main-container{
+	background-color:#f5f5f5;
+	padding:10px;
+}
+.testimonial{
+	Padding:10px;
+	Border:1px solid black;
+	Background-color:white;
+	margin:10px;
+}
+.author{
+	text-align:right;
+	font-style:italic;
+}
+.text{
+	text:normal;
+}
